# webamp

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .htaccess  .prettierignore  .travis.yml  CHANGELOG.md  CNAME  Gruntfile.js  README.md  anchor.js  debug.sh  deploy.sh  dev.html  embed.html  eslint-local-rules.js  features.md  file-manager.js  font.js  index.d.ts  index.ejs  index.html  index.json  install-webamp.sh  jest-puppeteer.config.js  library.html  likes.txt  loadQueue.test.js  manifest.json  media.js  names.json  netlify.toml  nodes.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  (+16 more)
.github/workflows/: ci-test.yml  ci.yml  code-size-test.yml  code-size.yml  ia-integration-tests.yml  nodejs.yml
assets/skins/: AmigaPPC-dark.wsz  base-2.91-png.wsz  base-2.91.wsz
automated_screenshots/: README.md  index.js
automated_screenshots/skins/: .gitignore
config/: jest.eslint.js  jest.integration.js  jest.unit.js  webpack.bundle-analyzer.js  webpack.common.js  webpack.dev.js  webpack.library.js  webpack.prod.js
css/: base-skin.css  base-skin.min.css  cleanslate.css  context-menu.css  equalizer-window.css  gen-window.css  main-window.css  main.css  media-library-window.css  mini-time.css  page.css  playlist-window.css  playlist.css  webamp.css  winamp.css
cursors/: EQSLID.CUR  MIN.CUR  PNORMAL.CUR
demo/: index.html  readme.md
demo/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
demo/css/: page.css
demo/js/: DemoDesktop.tsx  DesktopIcon.tsx  Mp3Icon.tsx  SkinIcon.tsx  WebampIcon.tsx  avaliableSkins.ts  butterchurnOptions.ts  config.ts  delete-service-worker.js  dropboxFilePicker.ts  index.js  index.tsx  indexedDB.js  mediaSession.ts  screenshotInitialState.ts  sentryMiddleware.js  timidity.js
demo/mp3/: Pokemon - Pokemon Center Theme.mid
demo/timidity/: .npmignore  README.md  bundle.js  freepats.cfg  index.js  libtimidity.js  libtimidity.wasm  package.json
demo/timidity/libtimidity/: AUTHORS  CHANGES  COPYING  INSTALL  Makefile.am  Makefile.in  README  README.timidity  TODO  aclocal.m4  config.h.in  configure  configure.ac  libtimidity.pc.in  libtimidity.spec  libtimidity.spec.in
demo/timidity/libtimidity/autotools/: ltmain.sh
demo/timidity/libtimidity/m4/: ao.m4  libtool.m4
demo/timidity/libtimidity/src/: Makefile.am  Makefile.amigaos  Makefile.aros  Makefile.darwin  Makefile.dj  Makefile.emx  Makefile.in  Makefile.lcc  Makefile.mingw  Makefile.morphos  Makefile.os2  Makefile.vbcc  OWMakefile.win32  common.c  common.h  instrum.c  instrum.h  mix.c  mix.h  options.h  ospaths.h  output.c  output.h  playmidi.c  playmidi.h  readmidi.c  readmidi.h  resample.c  resample.h  stream.c  tables.c  tables.h  timi_endian.h  timidity.c  timidity.def  timidity.h  timidity_internal.h
demo/timidity/libtimidity/src/VisualStudio/: libtimidity.sln  libtimidity.vcproj  timidity_static.vcproj
demo/timidity/libtimidity/src/XCode/: Info.plist  InfoPlist.strings  libtimidity.exports
demo/timidity/libtimidity/src/XCode/libtimidity.xcodeproj/: project.pbxproj
demo/timidity/libtimidity/tests/: Makefile.am  Makefile.in  ame002.mid  midi2raw.c  playmidi.c  runtest.sh
docs/: architecture.md  music-credits.md  press.md  typescript-checking.md  usage.md  ussage.md
embed/: Gruntfile.js  package.json
examples/: readme.md
examples/contained/: README.md  index.html  package.json
examples/lazy/: README.md  index.html  package.json
examples/memory/: index.html
examples/minimal/: README.md  index.html
examples/minimalMilkdrop/: README.md  index.html
examples/parcel/: index.js  (+1 more)
experiments/: crazy-canvas-hax.js  skin.html
html/: template.html
js/: Actions.jsx  Balance.jsx  Character.jsx  CharacterString.jsx  Close.jsx  ClutterBar.jsx  ContextMenu.jsx  Disposable.ts  DragTarget.jsx  DraggableWindow.jsx  Kbps.jsx  Khz.jsx  MainWindow.jsx  Marquee.jsx  MonoStereo.jsx  Position.jsx  Repeat.jsx  ShadeTime.jsx  Shuffle.jsx  Time.jsx  Visualizer.jsx  Volume.jsx  WebampIcon.tsx  actionCreators.js  actionCreators.test.js  actionTypes.js  actionTypes.ts  analyticsMiddleware.js  baseSkin.json  browser.js  build.js  config.js  config.ts  constants.js  constants.ts  context.js  dev-service-worker.js  embed.js  emitter.js  emitter.ts  (+82 more)
modern/: .eslintrc  index.html
mp3/: test.m3u
patches/: butterchurn@3.0.0-beta.5.patch
production/: Gruntfile.js  README.md  analytics.js  package.json
public/: index.html
rjs/: build.js  bundle.js
scripts/: allFileNames.js  bust.sh  compileSkin.js  createSearchIndex.js  deploy.sh  extractSkinText.js  findSkins.js  postcss-optimize-data-uri-pngs.js  postcss-optimize-data-uri-pngs.test.js  utils.js  validate-grats.sh
skins/: .gitignore  Green-Dimension-V2.wsz  MacOSXAqua1-5.wsz  Skinner_Atlas.wsz  TopazAmp1-2.wsz  base-2.91-png.wsz  base-2.91.wsz
src/: About.js  AnimationWrapper.js  App.css  App.js  Cell.js  DebugSkin.js  Disposable.js  DownloadLink.js  DropTarget.js  Featured.js  Feedback.js  FocusedSkin.js  Head.js  Header.js  LoadQueue.js  Overlay.js  Readme.js  ReviewPage.js  Skin.js  SkinReadme.js  SkinTable.js  UploadButton.js  UploadGrid.js  WebampComponent.js  Zoom.js  algolia.js  constants.js  hooks.js  index.js  page1.json  page10.json  page11.json  page12.json  page13.json  page14.json  page15.json  page16.json  page17.json  page18.json  page19.json  (+18 more)
tests/: index.html  main.js
(+1057 files in other folders)
